13 Sep 2023 Selenium POM

--- a/src/test/resources/Configuration.properties
+++ b/src/test/resources/Configuration.properties
@@ -3,3 +3,5 @@ GmoOnlineURL = https://demo.borland.com/gmopost/
 TitleOfGmoOnlineApp = Welcome to Green Mountain Outpost
 TitleOfOnLineCatalog= OnLine Catalog
 TitleOfPlaceOrder=Place Order
+AlertsUrl = https://demoqa.com/alerts
+AlertPageTitle=DEMOQA
