14 Sep 2023 Selenium Alerts

--- a/src/test/resources/Configuration.properties
+++ b/src/test/resources/Configuration.properties
@@ -5,3 +5,10 @@ TitleOfOnLineCatalog= OnLine Catalog
 TitleOfPlaceOrder=Place Order
 AlertsUrl = https://demoqa.com/alerts
 AlertPageTitle=DEMOQA
+NormalAlertTitle=You clicked a button
+TimerAlertTitle=This alert appeared after 5 seconds
+ConfirmBoxAlertTitle=Do you confirm action?
+ConfimrBoxAlertMessage=You selected Cancel
+PromptAlertMessage = Please enter your name
+PromptAlertText=Hello I am Learning Alerts
+PromptAlertResult= You entered Hello I am Learning Alerts
