15 Sep 2023 SoftAssertions and COntrol Statements

--- a/src/test/resources/Configuration.properties
+++ b/src/test/resources/Configuration.properties
@@ -7,7 +7,7 @@ AlertsUrl = https://demoqa.com/alerts
 AlertPageTitle=DEMOQA
 NormalAlertTitle=You clicked a button
 TimerAlertTitle=This alert appeared after 5 seconds
-ConfirmBoxAlertTitle=Do you confirm action?
+ConfirmBoxAlertTitle=Do you confirm act
 ConfimrBoxAlertMessage=You selected Cancel
 PromptAlertMessage = Please enter your name
 PromptAlertText=Hello I am Learning Alerts
