19 Sep 2023 Selenium Frames

--- a/src/test/resources/Configuration.properties
+++ b/src/test/resources/Configuration.properties
@@ -12,3 +12,7 @@ ConfimrBoxAlertMessage=You selected Cancel
 PromptAlertMessage = Please enter your name
 PromptAlertText=Hello I am Learning Alerts
 PromptAlertResult= You entered Hello I am Learning Alerts
+FramesURL = http://demo.automationtesting.in/Frames.html
+FramesTitle = Frames
+SingleFrameText=I am inside singleframe
+DoubleFrameText=TextBox inside frame with in an iframe
