25 Sep 2023 Selenium Mouse operations part 2

--- a/src/test/resources/Configuration.properties
+++ b/src/test/resources/Configuration.properties
@@ -20,6 +20,7 @@ mouseOpeartionRightClick= http://swisnl.github.io/jQuery-contextMenu/demo.html
 JQeryTitle = jQuery contextMenu (2.x)
 mouseOpeartionRightclick_Edit = clicked: edit
 mouseOpeartionDoubleClick = https://api.jquery.com/dblclick/
+colorAfterPerformingDoubleClick=rgba(255, 255, 0, 1)
 mouseOperationDragAndDrop = https://jqueryui.com/droppable/
 nxtgenaiacademyURL = https://nxtgenaiacademy.com/multiplewindows/
 nxtgenaiacademyTitle =Demo Site \u2013 Multiple Windows \u2013 NxtGen A.I Academy
