27 Sep 2023 Selenium Extent Reports

--- a/src/test/resources/Configuration.properties
+++ b/src/test/resources/Configuration.properties
@@ -1,4 +1,5 @@
 browser=chrome
+Environment=UAT
 GmoOnlineURL = https://demo.borland.com/gmopost/
 TitleOfGmoOnlineApp = Welcome to Green Mountain Outpost
 TitleOfOnLineCatalog= OnLine Catalog
