--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
 			<artifactId>webdrivermanager</artifactId>
 			<version>5.5.2</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+		<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>4.0.0</version>
+		</dependency>
 
 
 	</dependencies>
