new commit about mousehover actions perform on herouk application dragNDrop

--- a/src/test/resources/Configuration.properties
+++ b/src/test/resources/Configuration.properties
@@ -73,3 +73,5 @@ PostRequestUserNameCreated = RaghuAutomation789
 PutRequestGoRestURI = https://gorest.co.in/public/v2/users/2612194
 DeleteUserInGoRestAPI= https://gorest.co.in/public/v2/users/2612321
 FlipkartUrl = https://www.flipkart.com/
+Moushoverherokuapp=https://the-internet.herokuapp.com/drag_and_drop
+herokuappTitle=The Internet
