new Commit for frames

--- a/src/test/resources/Configuration.properties
+++ b/src/test/resources/Configuration.properties
@@ -75,3 +75,24 @@ DeleteUserInGoRestAPI= https://gorest.co.in/public/v2/users/2612321
 FlipkartUrl = https://www.flipkart.com/
 Moushoverherokuapp=https://the-internet.herokuapp.com/drag_and_drop
 herokuappTitle=The Internet
+chercherURL=https://chercher.tech/practice/frames-example-selenium-webdriver
+checherTitle=Frames Example in Selenium webdriver
+TopicTextBox=appleData
+NestedFrameUrl=https://demoqa.com/nestedframes
+NestedFrameTitle=DEMOQA
+HYRTutorialsUrl=https://www.hyrtutorials.com/p/frames-practice.html
+HyrtutorialTitle=Frames Practice - H Y R Tutorials
+FirstName=pradeep
+LastName=kumar
+Emailframe2=kuamr@gmail.com
+passwordframe2=1234@Abc
+
+
+
+
+
+
+
+
+
+
