--- a/src/test/resources/Configuration.properties
+++ b/src/test/resources/Configuration.properties
@@ -28,7 +28,11 @@ nxtgenaiacademyTitle =Demo Site \u2013 Multiple Windows \u2013 NxtGen A.I Academ
 newBrowserWindowTitle = NxtGen A.I Academy \u2013 Automate Intelligently
 TechTalkInNewBrowserWindow = TechTalk
 UrlOfTechTalkInNewBrowserWindow = https://nxtgenaiacademy.com/techtalk/
-DropDownUrl = https://tutorialshut.com/demo-website-for-selenium-automation-practice/
+DropDownUrl = https://demoqa.com/automation-practice-form
+TitleOfToolsQA = DEMOQA
+DropDownMonth = March
+DropDownYear = 2021
+DropDownDay = 23
 titleOfTutorialsHut = Demo website for selenium Automation Practice - Tutorials Hut
 WebTableURL = https://editor.datatables.net/examples/inline-editing/simple
 TitleOfWebTable = DataTables example - Simple inline editing
