7 Oct 2023 Selenium Goibibo App

--- a/src/test/resources/Configuration.properties
+++ b/src/test/resources/Configuration.properties
@@ -33,6 +33,8 @@ TitleOfToolsQA = DEMOQA
 DropDownMonth = March
 DropDownYear = 2021
 DropDownDay = 23
+goibiboURL = https://www.goibibo.com/
+goibiboTitle = Goibibo - Best Travel Website. Book Hotels, Flights, Trains, Bus and Cabs with upto 50% off
 titleOfTutorialsHut = Demo website for selenium Automation Practice - Tutorials Hut
 WebTableURL = https://editor.datatables.net/examples/inline-editing/simple
 TitleOfWebTable = DataTables example - Simple inline editing
