--- a/src/test/resources/Configuration.properties
+++ b/src/test/resources/Configuration.properties
@@ -38,7 +38,7 @@ goibiboTitle = Goibibo - Best Travel Website. Book Hotels, Flights, Trains, Bus 
 titleOfTutorialsHut = Demo website for selenium Automation Practice - Tutorials Hut
 WebTableURL = https://editor.datatables.net/examples/inline-editing/simple
 TitleOfWebTable = DataTables example - Simple inline editing
-WebTableLastName = Stevens
+WebTableLastName = Bruce
 FileUpload = http://demo.automationtesting.in/FileUpload.html
 TiTleOfFileupload = File input - Multi select
 FileDownload=https://file-examples.com/index.php/sample-documents-download/sample-doc-download./
