18 Oct 2023 Selenium Validate Links and Healdless browser execution

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
 			<version>5.2.3</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/htmlunit-driver -->
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>htmlunit-driver</artifactId>
+			<version>4.11.0</version>
+		</dependency>
 
 
 	</dependencies>
