--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
 			<version>5.3.1</version>
 
 		</dependency>
+		
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>7.5.1</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
