--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,38 @@
 	<artifactId>AugSeleniumJava2023</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<dependencies>
+	<build>
+		<sourceDirectory>src</sourceDirectory>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+					<suiteXmlFiles>
+						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+					</suiteXmlFiles>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+	<dependencies>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
 			<version>4.11.0</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>io.github.bonigarcia</groupId>
@@ -55,7 +79,7 @@
 			<version>5.3.1</version>
 
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
@@ -64,6 +88,5 @@
 		</dependency>
 
 	</dependencies>
-
 
 </project>
